[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = { version = "0.3.7", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
uuid = {version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
log = "0.4.22"
cookie = "0.18.1"